--- a/build-Meteo-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile.Release
+++ b/build-Meteo-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile.Release
@@ -169,7 +169,8 @@ release/main.o: ../Meteo/main.cpp C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/Q
 		C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/qcontainerfwd.h \
 		C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/qisenum.h \
 		C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/qobject_impl.h \
-		C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/qeventloop.h
+		C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/qeventloop.h \
+		../Meteo/requeteown.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\main.o ..\Meteo\main.cpp
 
 release/requeteown.o: ../Meteo/requeteown.cpp ../Meteo/requeteown.h
