--- a/build-Meteo-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile.Debug
+++ b/build-Meteo-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile.Debug
@@ -17,7 +17,7 @@ CXXFLAGS      = -pipe -fno-keep-inline-dllexport -g -frtti -Wall -Wextra -fexcep
 INCPATH       = -I..\Meteo -I"C:\Qt\Qt5.3.2\5.3\mingw482_32\include" -I"C:\Qt\Qt5.3.2\5.3\mingw482_32\include\QtCore" -I"debug" -I"." -I"C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\win32-g++"
 LINKER      =        g++
 LFLAGS        =        -Wl,-subsystem,console -mthreads
-LIBS        =        -LC:/Qt/Qt5.3.2/5.3/mingw482_32/lib -lQt5Cored 
+LIBS        =        C:\Qt\Qt5.3.2\Tools\mingw482_32\i686-w64-mingw32\lib\libws2_32.a -LC:/Qt/Qt5.3.2/5.3/mingw482_32/lib -lQt5Cored 
 QMAKE         = C:\Qt\Qt5.3.2\5.3\mingw482_32\bin\qmake.exe
 IDC           = idc
 IDL           = midl
@@ -44,9 +44,13 @@ OBJECTS_DIR   = debug
 ####### Files
 
 SOURCES       = ..\Meteo\main.cpp \
-		..\Meteo\requeteown.cpp 
+		..\Meteo\requeteown.cpp \
+		..\Meteo\SNClientHTTP.cpp \
+		..\Meteo\meteoown.cpp 
 OBJECTS       = debug/main.o \
-		debug/requeteown.o
+		debug/requeteown.o \
+		debug/SNClientHTTP.o \
+		debug/meteoown.o
 
 DIST          = 
 QMAKE_TARGET  = Meteo
@@ -87,7 +91,7 @@ dist:
 	$(ZIP) Meteo.zip $(SOURCES) $(DIST) ..\Meteo\Meteo.pro C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\spec_pre.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\qdevice.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\device_config.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\common\shell-win32.conf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\qconfig.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_axbase.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_axbase_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_axcontainer.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_axcontainer_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_axserver.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_axserver_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_bluetooth.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_bluetooth_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_bootstrap_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_clucene_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_concurrent.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_concurrent_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_core.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_core_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_declarative.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_declarative_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_designer.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_designer_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_designercomponents_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_enginio.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_enginio_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_gui.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_gui_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_help.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_help_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_multimedia.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_multimedia_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_multimediawidgets.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_multimediawidgets_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_network.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_network_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_nfc.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_nfc_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_opengl.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_opengl_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_openglextensions.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_openglextensions_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_platformsupport_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_positioning.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_positioning_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_printsupport.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_printsupport_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_qml.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_qml_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_qmldevtools_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_qmltest.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_qmltest_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_qtmultimediaquicktools_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_quick.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_quick_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_quickparticles_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_quickwidgets.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_quickwidgets_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_script.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_script_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_scripttools.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_scripttools_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_sensors.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_sensors_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_serialport.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_serialport_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_sql.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_sql_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_svg.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_svg_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_testlib.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_testlib_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_uitools.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_uitools_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_webkit.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_webkit_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_webkitwidgets.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_webkitwidgets_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_websockets.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_websockets_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_widgets.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_widgets_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_winextras.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_winextras_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_xml.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_xml_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_xmlpatterns.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\modules\qt_lib_xmlpatterns_private.pri C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\qt_functions.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\qt_config.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\win32\qt_config.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\win32-g++\qmake.conf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\spec_post.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\exclusive_builds.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\default_pre.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\win32\default_pre.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\resolve_config.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\exclusive_builds_post.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\default_post.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\build_pass.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\win32\console.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\win32\rtti.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\precompile_header.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\warn_on.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\qt.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\resources.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\moc.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\testcase_targets.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\exceptions.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\yacc.prf C:\Qt\Qt5.3.2\5.3\mingw482_32\mkspecs\features\lex.prf ..\Meteo\Meteo.pro C:/Qt/Qt5.3.2/5.3/mingw482_32/lib/Qt5Cored.prl  NO_PCH_SOURCES RESOURCES HEADERS SOURCES OBJECTIVE_SOURCES YACCSOURCES YACCSOURCES LEXSOURCES 
 
 clean: compiler_clean 
-	-$(DEL_FILE) debug\main.o debug\requeteown.o
+	-$(DEL_FILE) debug\main.o debug\requeteown.o debug\SNClientHTTP.o debug\meteoown.o
 
 distclean: clean 
 	-$(DEL_FILE) $(DESTDIR_TARGET)
@@ -170,11 +174,20 @@ debug/main.o: ../Meteo/main.cpp C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/QCo
 		C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/qisenum.h \
 		C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/qobject_impl.h \
 		C:/Qt/Qt5.3.2/5.3/mingw482_32/include/QtCore/qeventloop.h \
-		../Meteo/requeteown.h
+		../Meteo/requeteown.h \
+		../Meteo/SNClientHTTP.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\main.o ..\Meteo\main.cpp
 
 debug/requeteown.o: ../Meteo/requeteown.cpp ../Meteo/requeteown.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\requeteown.o ..\Meteo\requeteown.cpp
+
+debug/SNClientHTTP.o: ../Meteo/SNClientHTTP.cpp ../Meteo/SNClientHTTP.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\SNClientHTTP.o ..\Meteo\SNClientHTTP.cpp
+
+debug/meteoown.o: ../Meteo/meteoown.cpp ../Meteo/meteoown.h \
+		../Meteo/requeteown.h \
+		../Meteo/SNClientHTTP.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\meteoown.o ..\Meteo\meteoown.cpp
 
 ####### Install
 
